awesome-compose/aspnet-mssql/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: eks-ingress-class
spec:
  controller: ingress.k8s.aws/alb
