awesome-compose/aspnet-mssql/cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-asp-demo-service
spec:
  type: LoadBalancer
  # NodePort
  selector:
    app: web
  ports:
    - protocol: TCP
      nodePort: 31479
      port: 5000
      targetPort: 5000
