awesome-compose/aspnet-mssql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspdemosvc
spec:
  type: NodePort
  # loadbalancer
  selector:
    app: web
  ports:
    - protocol: TCP
      nodePort: 31479
      port: 5000
      targetPort: 5000
