awesome-compose/aspnet-mssql/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asp-poc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: eks-ingress-class
  rules:
    - host: "foo.bar.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-asp-demo-service
                port:
                  number: 5000
